[feature] add 'Contact' section to '/portfolio'
New Components:
- Tooltip component - shows tip on hover
- CopyToClipboard component - allows click to copy function

- Mobile responsive Contact section that contains all contact information.
- Contact information supplied in contact.json
- Icon mapping to JSON

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,7 @@ body {
 p::selection,
 h1::selection,
 h2::selection,
+code::selection,
 span::selection {
   background-color: #e7cc47; /* Or any other Tailwind color */
   color: #704b06; /* Optional: change text color for contrast */
