--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,11 @@ body {
 p::selection,
 h1::selection,
 h2::selection,
+h3::selection,
+h4::selection,
+a::selection,
 code::selection,
+button::selection,
 span::selection {
   background-color: #e7cc47; /* Or any other Tailwind color */
   color: #704b06; /* Optional: change text color for contrast */
