[feature] add 'Projects' section to '/portfolio'
New Component:
- Card component for project details customisation and viewing

Projects Section:
- Arrow and dot navigation between project cards
- Mobile responsive (Tab navigation)

- types.ts to contain all component required type definitions

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,8 +22,10 @@ h1::selection,
 h2::selection,
 h3::selection,
 h4::selection,
+h5::selection,
 a::selection,
 code::selection,
+img::selection,
 button::selection,
 span::selection {
   background-color: #e7cc47; /* Or any other Tailwind color */
